@@ -7,6 +7,12 @@
 	closures -- check both beginning and end bond specifications for
 	the closure. Uses new function EquivalentBondExpr to test if
 	two bond specifications are equivalent.
+	Fix part of PR#1506408 for SMARTS matching @ and @@ atom
+	specifications.
+
+	* src/formats/smilesformat.cpp: Fix cis/trans problem with
+	PR#1506408 -- IsUp/IsDown parsing support in SMILES was
+	inconsistent with mol.h and parsmart.cpp. "/" is Up "\" is Down.
 
 	* src/kekulize.cpp: Fix PR#1504089 by adding a special case to
 	prevent double bonds between aromatic S-S systems, which is
